--- a/scss/partials/_reset.scss
+++ b/scss/partials/_reset.scss
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap");
 
 /**
  * ! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css
  * ! PARTIAL VERSION, ONLY WHAT NEEDED FOR THIS SMALL PROJECT
  */
-
 
 /* Document
    ========================================================================== */
@@ -27,7 +26,7 @@ html {
  */
 
 body {
-    font-family: 'Space Grotesk', sans-serif;
+    font-family: "Space Grotesk", sans-serif;
     margin: 0;
 }
 
@@ -37,37 +36,6 @@ body {
 
 main {
     display: block;
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-    font-weight: bolder;
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-    font-size: 80%;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-    border-style: none;
 }
 
 /* Forms
